# meshcast

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md  meshcast.desktop
.github/workflows/: release.yml
crates/meshcast-app/: Cargo.toml
crates/meshcast-app/src/: main.rs
crates/meshcast-bot/: Cargo.toml
crates/meshcast-bot/src/: main.rs
crates/meshcast-cli/: Cargo.toml
crates/meshcast-cli/src/: main.rs
crates/meshcast-signal/: Cargo.toml
crates/meshcast-signal/src/: lib.rs
scripts/: deploy-bot.sh  install-uri.sh  meshcast-tray.py
