[workspace]
members = ["crates/meshcast-bot", "crates/meshcast-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[patch.crates-io]
noq = { git = "https://github.com/n0-computer/noq", branch = "main" }
noq-proto = { git = "https://github.com/n0-computer/noq", branch = "main" }
noq-udp = { git = "https://github.com/n0-computer/noq", branch = "main" }
iroh = { git = "https://github.com/n0-computer/iroh", branch = "main" }
iroh-base = { git = "https://github.com/n0-computer/iroh", branch = "main" }
iroh-relay = { git = "https://github.com/n0-computer/iroh", branch = "main" }
iroh-gossip = { git = "https://github.com/n0-computer/iroh-gossip", branch = "deps/iroh-main" }
web-transport-iroh = { git = "https://github.com/Frando/web-transport", branch = "deps/iroh-main" }
web-transport-noq = { git = "https://github.com/Frando/web-transport", branch = "deps/iroh-main" }
web-transport-proto = { git = "https://github.com/Frando/web-transport", branch = "deps/iroh-main" }
web-transport-trait = { git = "https://github.com/Frando/web-transport", branch = "deps/iroh-main" }
