[package]
name = "meshcast-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "meshcast-app"
path = "src/main.rs"

[dependencies]
anyhow = "1"
libc = "0.2"
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
meshcast-signal = { path = "../meshcast-signal" }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = { version = "27", default-features = false, features = ["vulkan", "gles"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.19"
