[package]
name = "meshcast-bot"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "meshcast-bot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dirs-next = "2"
futures-lite = "2"
iroh = { git = "https://github.com/n0-computer/iroh", rev = "8af8370b567d9e9a89aaf25929b327a6a5b96de1" }
iroh-gossip = { git = "https://github.com/n0-computer/iroh-gossip", branch = "deps/iroh-main" }
meshcast-signal = { path = "../meshcast-signal" }
rand = "0.8"
poise = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
