[package]
name = "meshcast-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "meshcast"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
iroh-live = { git = "https://github.com/n0-computer/iroh-live", branch = "main", features = ["h264", "opus", "capture-screen"] }
moq-media = { git = "https://github.com/n0-computer/iroh-live", branch = "main" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
