[package]
name = "meshcast-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "meshcast"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs-next = "2"
futures-lite = "2"
iroh = { git = "https://github.com/n0-computer/iroh", rev = "8af8370b567d9e9a89aaf25929b327a6a5b96de1" }
meshcast-signal = { path = "../meshcast-signal" }
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
iroh-live = { git = "https://github.com/n0-computer/iroh-live", branch = "main", features = ["h264", "opus", "capture-screen"] }
moq-media = { git = "https://github.com/n0-computer/iroh-live", branch = "main" }
moq-media-egui = { git = "https://github.com/n0-computer/iroh-live", branch = "main" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
